# or_fcl

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  catkin.cmake  manifest.xml  package.xml  rosbuild.cmake
catkin-env-hooks/: 20.or_fcl.sh.in
scripts/: test.py
src/: FCLCollisionChecker.cpp  FCLCollisionChecker.h  MarkPairsCollisionChecker.cpp  MarkPairsCollisionChecker.h  or_fcl_plugin.cpp
tests/: test_collision_checks.py
tests/ordata/: box.kinbody.xml  cylinder.kinbody.xml  small_cylinder.kinbody.xml  sphere.kinbody.xml
