<?xml version="1.0"?>
<package>
  <name>or_fcl</name>
  <version>0.2.0</version>
  <description>
    OpenRAVE bindings for the Flexible Collision Checking (FCL) library.
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend>openrave_catkin</run_depend>
</package>
