<?xml version="1.0"?>
<package format="2">
  <name>or_fcl</name>
  <version>0.2.0</version>
  <description>
    OpenRAVE bindings for the Flexible Collision Checking (FCL) library.
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>fcl</depend>
  <depend>openrave</depend>
  <test_depend>python-nose</test_depend>
</package>
